[package]
name = "atari-env-sys"
version = "0.1.0"
authors = ["elbaro <elbaro@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sdl"]
sdl = []

[dependencies]

[build-dependencies]
bindgen = "0.57.0"
cmake = "0.1.45"
