[package]
name = "atari-env"
version = "0.1.0"
authors = ["elbaro <elbaro@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atari-env-sys = { path = "../atari-env-sys" }
c_str_macro = "1.0.2"
image = "0.23.14"
minifb = "0.19.2"
pixels = "0.2.0"
strum = { version = "0.20.0", features = ["derive"] }
viuer = "0.4.0"
wgpu = "0.7.0"
winit = "0.24.0"
winit_input_helper = "0.9.0"

[dev-dependencies]
rand = "0.8.3"
tch = "0.4.0"
