[package]
name = "atari-env"
version = "0.1.0"
authors = ["elbaro <elbaro@users.noreply.github.com>"]
edition = "2018"
description = "Atari Environment for Reinforcement Learning"
repository = "https://github.com/elbaro/gym-rs"
license = "GPL-2.0-or-later"
keywords = ["learning", "rl", "ml", "gym", "atari"]
categories = ["science", "simulation", "api-bindings", "emulators"]

[features]
default = []
sdl = ["atari-env-sys/sdl"]

[dependencies]
atari-env-sys = { version = "0.1.0", path = "../atari-env-sys" }
c_str_macro = "1.0.2"
image = "0.23.14"
minifb = "0.19.2"
pixels = "0.2.0"
strum = { version = "0.20.0", features = ["derive"] }
viuer = "0.4.0"
wgpu = "0.7.0"
winit = "0.24.0"
winit_input_helper = "0.9.0"
gym-core = { path = "../gym-core" }
ndarray = { version = "0.15.1", features = ["rayon"] }

[dev-dependencies]
dirs = "3.0.1"
rand = "0.8.3"
tch = "0.4.0"
