[package]
name = "gym"
version = "0.1.0"
authors = ["elbaro <elbaro@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["atari"]
atari = ["atari-env"]
openspiel = ["openspiel-env"]

[dependencies]
anyhow = "1.0.40"
atari-env = { path = "../atari-env", optional = true }
openspiel-env = { path = "../openspiel-env", optional = true }
gym-core = { path = "../gym-core" }

[dev-dependencies]
ndarray = "0.15.1"
pixels = "0.2.0"
rand = "0.8.3"
winit = "0.24.0"
