[package]
name = "gym"
version = "0.1.0"
authors = ["elbaro <elbaro@users.noreply.github.com>"]
edition = "2018"
description = "Gym for Reinforcement Learning"
repository = "https://github.com/elbaro/gym-rs"
license = "MIT"
keywords = ["learning", "rl", "ml", "gym"]
categories = ["science", "simulation", "emulators"]

[features]
default = ["atari"]
atari = ["atari-env"]
# openspiel = ["openspiel-env"]

[dependencies]
anyhow = "1.0.40"
atari-env = { version = "0.1.1", path = "../atari-env", optional = true }
# openspiel-env = { version = "0.1.0", path = "../openspiel-env", optional = true }
gym-core = { version = "0.1.0", path = "../gym-core" }

[dev-dependencies]
ndarray = "0.15.1"
pixels = "0.2.0"
rand = "0.8.3"
winit = "0.24.0"
